--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
     "slugify": "^1.6.6",
+    "sqlite": "^5.1.1",
     "styled-components": "5.3.3"
   },
   "engines": {
