--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@strapi/plugin-i18n": "4.15.5",
     "@strapi/plugin-users-permissions": "4.15.5",
     "@strapi/provider-email-nodemailer": "^4.17.0",
+    "@strapi/provider-upload-cloudinary": "^4.17.1",
     "@strapi/strapi": "4.15.5",
     "better-sqlite3": "^9.3.0",
     "jsdom": "^23.0.1",
